Bug 1709254 [Wayland] Close popups without visible parent to avoid application crash due to broken popup hierarchy r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D154061